# TextSearchEngine

./: .gitignore  CMakeLists.txt  README.md
data/: file1.txt  file2.txt  file3.txt  fileList.txt
include/: SearchCore.h
output/: output.txt
src/: SearchCore.cpp  main.cpp
